--- a/package.json
+++ b/package.json
@@ -9,11 +9,22 @@
     "deploy": "npx netlify deploy --dir web-build"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/bottom-tabs": "^5.4.5",
+    "@react-navigation/native": "^5.4.0",
+    "@react-navigation/stack": "^5.3.7",
     "expo": "37.0.7",
+    "expo-calendar": "^8.1.0",
+    "expo-permissions": "^8.1.0",
     "react": "16.9.0",
     "react-dom": "16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-gesture-handler": "^1.6.1",
+    "react-native-reanimated": "^1.8.0",
+    "react-native-safe-area-context": "^1.0.0",
+    "react-native-screens": "^2.7.0",
     "react-native-web": "0.11.7",
+    "react-navigation": "^4.3.9",
     "react-router-dom": "5.1.2",
     "react-router-native": "5.1.2"
   },
