--- a/package.json
+++ b/package.json
@@ -9,13 +9,22 @@
     "deploy": "npx netlify deploy --dir web-build"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.10.1",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-firebase/app": "^7.0.1",
+    "@react-native-firebase/firestore": "^7.0.1",
     "@react-navigation/bottom-tabs": "^5.4.5",
     "@react-navigation/native": "^5.4.0",
     "@react-navigation/stack": "^5.3.7",
+    "@redux-offline/redux-offline": "^2.5.2-expo.0",
+    "axios": "^0.19.2",
+    "base-64": "^0.1.0",
     "expo": "37.0.7",
     "expo-calendar": "^8.1.0",
     "expo-permissions": "^8.1.0",
+    "expo-secure-store": "^8.1.0",
+    "firebase": "^7.14.4",
+    "lodash": "^4.17.15",
     "react": "16.9.0",
     "react-dom": "16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
@@ -25,11 +34,23 @@
     "react-native-screens": "^2.7.0",
     "react-native-web": "0.11.7",
     "react-navigation": "^4.3.9",
+    "react-redux": "^7.2.0",
     "react-router-dom": "5.1.2",
-    "react-router-native": "5.1.2"
+    "react-router-native": "5.1.2",
+    "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
+    "redux-persist-expo-securestore": "^2.0.0",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "@babel/core": "7.9.0"
+    "@babel/core": "7.9.0",
+    "@types/jest": "^25.2.3",
+    "@types/node": "^14.0.5",
+    "@types/react": "^16.9.35",
+    "@types/react-native": "^0.62.11",
+    "@types/react-redux": "^7.1.9",
+    "@types/react-test-renderer": "^16.9.2",
+    "typescript": "^3.9.3"
   },
   "private": true
 }
