--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "base-64": "^0.1.0",
     "expo": "37.0.7",
     "expo-calendar": "^8.1.0",
+    "expo-font": "~8.1.0",
     "expo-permissions": "^8.1.0",
     "expo-secure-store": "^8.1.0",
     "firebase": "^7.14.4",
@@ -30,6 +31,8 @@
     "react-dom": "16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-markdown-renderer": "^3.2.8",
+    "react-native-markdown-view": "^1.1.4",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^1.0.0",
     "react-native-screens": "^2.7.0",
@@ -41,8 +44,7 @@
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-persist-expo-securestore": "^2.0.0",
-    "redux-thunk": "^2.3.0",
-    "expo-font": "~8.1.0"
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "7.9.0",
