--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-persist-expo-securestore": "^2.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "expo-linear-gradient": "~8.1.0"
   },
   "devDependencies": {
     "@babel/core": "7.9.0",
